Fix checkbox and row for long Schedule names (#1867)
Fix applies to other instances of the checkbox
where the checkmark is not visible

Use more generic selector for list height (#1868)
Move class to the madero tooltip

--- a/web/scss/sections/apps-home.scss
+++ b/web/scss/sections/apps-home.scss
@@ -86,6 +86,11 @@
   &.tooltip {
     opacity: 1;
 
+    .scrollable-list {
+      min-height: 150px;
+      max-height: 150px;
+    }    
+
     &.tooltip-guide {
       .tooltip-inner {
         text-align: left;
