--- a/web/scss/sections/schedules.scss
+++ b/web/scss/sections/schedules.scss
@@ -28,10 +28,3 @@
     }
   }
 }
-
-.schedule-selector-tooltip {
-  .scrollable-list {
-    min-height: 150px;
-    max-height: 150px;
-  }
-}
